# show_case

./: .gitignore  README.md  financials_api_get.py  pyproject.toml
airflow/: Dockerfile  docker-compose.yaml  smtp_test.py
airflow/dags/: fundamental_data_pipeline.py
libs/: __init__.py  financials_api_get.py
