[tool.poetry]
name = "show-case"
version = "0.1.0"
description = ""
authors = ["geds133 <gerardchurch133@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.1.3"
apache-airflow = { version="^2.7.3", python= ">=3.11,<3.12" }
requests = "^2.31.0"
pendulum = "^2.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
